--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -21,6 +21,14 @@ jobs:
       run: |
         npm install
         npm run build
+    - name: List directory and path
+      run: |
+        result=$(ls -la)
+        echo "Outputting current directory: "
+        echo "$result"
+        result=$(pwd)
+        echo "Outputting current path: "
+        echo "$result"
 
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
